# fastapi

./: Dockerfile  README.md  pyproject.toml
src/age_pred/: .db.py.swp  .main.py.swp  db.py  main.py
